# thomasthechatbot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  cli.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
chatbot/: chatbot.py  context.py
src/: cli.py  config.py  utils.py
src/bot/: client.py  main.py
src/chatbot/: __init__.py  chatbot.py  context.py
src/cli/: main.py
ttc/: __init__.py
ttc/bot/: client.py  main.py
ttc/chatbot/: chatbot.py  context.py
ttc/cli/: main.py
