[tool.poetry]
name = "thomasthechatbot"
version = "0.1.0"
description = "A Python chatbot that learns as you speak to it."
authors = ["principle105 <principle105@gmail.com>"]
license = "MIT"
repository = "https://github.com/principle105/thomasthechatbot"
readme = "README.md"
keywords = ["chatbot"]
packages = [
    { include = "*", from =  "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
contractions = "^0.1.72"
python-decouple = "^3.6"

inquirerpy = { version = "^0.3.4", optional = true }
typer = { version = "^0.6.1", optional = true }
yaspin = { version = "^2.2.0", optional = true }
"discord.py" = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
cli = ["inquirerpy", "typer", "yaspin"]
bot = ["discord.py"]


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[tool.poetry.scripts]
ttc = "cli.main:app"
ttcbot = "bot.main:main"

[tool.isort]
multi_line_output = 3
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
